<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clear_cache_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <!-- title -->

    <RelativeLayout
        android:id="@+id/about_title_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_rellayout_bg" >

        <!-- title -->

        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/about_title"
            android:textColor="#ffffff"
            android:textSize="21dp" />

        <!-- back -->

        <Button
            android:id="@+id/about_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_btn_bg_selector"
            android:text="@string/app_back_btn"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <!-- content -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/about_title_rl"
        android:background="#ffffff" >

        <RelativeLayout
            android:id="@+id/about_top_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="7dp" >

            <ImageView
                android:id="@+id/about_logo_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logo" />

            <TextView
                android:id="@+id/about_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/about_logo_img"
                android:text="@string/about_app_name"
                android:textColor="#35769D"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/about_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_app_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_toRightOf="@id/about_logo_img"
                android:text="@string/about_app_version"
                android:textColor="#35769D"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/about_app_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_app_version"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/about_logo_img"
                android:text="@string/about_app_tip"
                android:textColor="#35769D"
                android:textSize="10sp" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/about_logo_img"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_every_bg_repeat" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_top_rl"
            android:padding="7dp" >

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_content"
                        android:textColor="#6F7279"
                        android:textSize="17dp" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>